# FactFusion

./: README.md  pyproject.toml  webapp.py
assets/css/: app.min.css
docs/: user_guide.md
factcheck/: __init__.py
factcheck/utils/: api_config.py  multimodal.py
factcheck/utils/llmclient/: __init__.py  groq_client.py
templates/: FactFusion.html  input.html
